# CGServer

./: CGServer.sln  README.md
CGServer/: CGServer.cpp  CGServer.vcxproj  CGServer.vcxproj.filters  messageTypes.txt
cgsv/: .gitignore  Makefile  Makefile.win  README.md  README_EN.md  build.bat  cgsv.cpp  echocl.cpp  echosv.cpp
cgsv/UnityClient/: .gitignore
cgsv/UnityClient/Assets/MonobitSamples/Scenes/: SampleEchoClientSimple.unity  SampleEchoClientSimpleSettings.lighting  SampleEchoServer.unity  SampleLog.unity
cgsv/UnityClient/Assets/MonobitSamples/Scenes/SampleMain/: LightingData.asset
cgsv/UnityClient/Assets/MonobitSamples/Scripts/: SampleBaseLoop.cs  SampleEchoClient.cs  SampleEchoClientSimple.cs  SampleMain.cs
cgsv/UnityClient/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
cgsv/mrs_2.0.0/: ChangeLog.html  VERSION.txt  index.html
cgsv/mrs_2.0.0/mrs/: mrs_link.cmake  setup_dev.sh  setup_ops.sh  setup_timezone.sh  windows.cmake
cgsv/mrs_2.0.0/mrs/documents/: MRS_API_Overview.html  MRS_API_Reference.html  MRS_API_Reference_en.html  MRS_API_Setup.html  UDP_Tune.html
cgsv/mrs_2.0.0/mrs/include/: mrs.hpp
cgsv/mrs_2.0.0/mrs/include/mrs/: buffer.hpp
cgsv/mrs_2.0.0/mrs/sample/cpp/: CMakeLists.txt
cgsv/mrs_2.0.0/mrs/sample/cpp/source/: base_loop.cpp  base_server.cpp  echo_client.cpp  echo_server.cpp  log.cpp
cgsv/mrs_2.0.0/mrs/sample/csharp/source/: base_libs.cs  base_loop.cs  base_server.cs  base_server_linux.cs  base_server_win.cs  echo_client.cs  echo_server.cs  (+1 more)
cgsv/mrs_2.0.0/mrs/sample/go/: echo_server.go  echo_server.sh
(+42 files in other folders)
